--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.17",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "dayjs": "^1.11.19",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.9.5",
+    "recharts": "^3.5.0",
+    "redux-persist": "^6.0.0",
+    "sonner": "^2.0.7",
     "tailwindcss": "^4.1.17",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "18.3.27",
+    "@types/react-dom": "18.3.7",
     "@vitejs/plugin-react": "^5.0.4",
     "daisyui": "^5.4.7",
     "eslint": "^9.36.0",
